# Contrafold_GPU

./: .gitignore  Benchmark.md  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark.py  compare.py  generate_sequences.py
examples/: quickstart.py
gpu_contrafold/: __init__.py  cli.py  cpu.py  gpu.py  reference.py
tests/: test_validation.py
